<resources>
    <string name="app_name">Vehicle Parking Registration</string>
    <string name="title_registration">Vehicle Parking Registration</string>
    <string name="select_vehicle_type">Select Vehicle Type:</string>
    <string name="hint_vehicle_number">Vehicle Number</string>
    <string name="hint_rc_number">RC Number</string>
    <string name="btn_submit">Submit</string>
    <string name="title_confirmation">Confirm Details</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_confirm">Confirm</string>
    <string name="msg_fill_all">Please fill all fields</string>
    <string name="msg_parking_allotted">Parking Allotted! Serial No: %1$s</string>
</resources>